--- a/index.html
+++ b/index.html
@@ -3,3 +3,7 @@ title: Drachenwald Book of Ceremonies
 layout: webindex
 ---
 
+<p class="text-center">
+This is the Book of Ceremonies of the Kingdom of Drachenwald.<br />
+It may be used by heralds to conduct court at published Drachenwald events.
+</p>
